Reorganize structure again
