# example/app/cmd/api/swaggerui/swagger.json
@@ -10,8 +10,8 @@
   ],
   "swagger": "2.0",
   "info": {
-    "description": "This is the API for the Octane application.\n\nSwagger 2.0 Spec - generated by [go-swagger](https://github.com/go-swagger/go-swagger)",
-    "title": "Octane",
+    "description": "This is the API for the Octane sample application.\n\nSwagger 2.0 Spec - generated by [go-swagger](https://github.com/go-swagger/go-swagger)",
+    "title": "Octane Sample Application",
     "version": "1.0"
   },
   "host": "localhost:8080",
@@ -24,11 +24,12 @@
             "token": []
           }
         ],
+        "description": "You can use this endpoint as a healthcheck for a load balancer.",
         "tags": [
-          "hello"
+          "healthcheck"
         ],
-        "summary": "Return a hello message.",
-        "operationId": "HelloGET",
+        "summary": "Returns an OK message to show the application is functioning.",
+        "operationId": "HealthcheckGET",
         "responses": {
           "200": {
             "$ref": "#/responses/OKResponse"
