# example/app/config/app.go
@@ -1,8 +1,13 @@
 package config
 
 import (
+	"fmt"
+	"net/http"
+
 	"github.com/josephspurrier/octane"
+	"github.com/josephspurrier/octane/example/app"
 	"github.com/josephspurrier/octane/example/app/endpoint"
+	"github.com/josephspurrier/octane/example/app/lib/passhash"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 )
@@ -16,42 +21,55 @@ func Config() *echo.Echo {
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
 
+	// Use Go Playground Validator.
+	e.Binder = octane.NewBinder()
+
+	// Connect the services.
+	ac := new(app.Context)
+	ac.DB = Database(e.Logger)
+	ac.Passhash = passhash.New()
+
 	// Use app context.
-	e.Use(func(next echo.HandlerFunc) echo.HandlerFunc {
-		return func(c echo.Context) error {
-			cc := &octane.Context{Context: c}
-			return next(cc)
+	// e.Use(func(next echo.HandlerFunc) echo.HandlerFunc {
+	// 	return func(c echo.Context) error {
+	// 		cc := &app.Context{
+	// 			ResponseJSON: octane.ResponseJSON{Context: c},
+	// 			DB:           db,
+	// 		}
+	// 		return next(cc)
+	// 	}
+	// })
+
+	// Set the default error handler so all errors use the standard format.
+	e.HTTPErrorHandler = func(err error, c echo.Context) {
+		cc := &app.Context{
+			ResponseJSON: octane.ResponseJSON{Context: c},
+			DB:           ac.DB,
 		}
-	})
 
-	// // Set the error page.
-	// func customHTTPErrorHandler(err error, c echo.Context) {
-	// 	code := http.StatusInternalServerError
-	// 	if he, ok := err.(*echo.HTTPError); ok {
-	// 		code = he.Code
-	// 	}
-	// 	errorPage := fmt.Sprintf("%d.html", code)
-	// 	if err := c.File(errorPage); err != nil {
-	// 		c.Logger().Error(err)
-	// 	}
-	// 	c.Logger().Error(err)
-	// }
+		code := http.StatusInternalServerError
+		message := ""
+		if he, ok := err.(*echo.HTTPError); ok {
+			// Send a response when we know the message.
+			code = he.Code
+			message = fmt.Sprint(he.Message)
+			c.Logger().Error(err)
+			cc.MessageResponse(message, code)
+			return
+		}
 
-	// e.HTTPErrorHandler = customHTTPErrorHandler
-
-	// Database.
-	_ = Database(e.Logger)
+		// If we don't know the message, send the whole error as the message
+		// and use the Internal Server Error.
+		c.Logger().Error(err)
+		cc.MessageResponse(err.Error(), code)
+	}
 
 	// Endpoints.
-	e.GET("/", endpoint.Hello)
-	//e.GET("/2", endpoint.Hello2)
-
-	e.POST("/api/v1/login", endpoint.Login)
+	e.GET("/", ac.HandlerFunc(endpoint.Healthcheck))
+	e.POST("/api/v1/login", ac.HandlerFunc(endpoint.Login))
 
 	// Static routes.
 	e.Static("/swagger/*", "swaggerui")
-
-	e.Binder = octane.NewBinder()
 
 	return e
 }
